# wondwise

./: .dockerignore  .editorconfig  .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml  commands.rs  main.rs
crates/wondwise-cli/: Cargo.toml
crates/wondwise-cli/src/: main.rs
crates/wondwise-cli/src/commands/: start.rs
crates/wondwise_cli/: Cargo.toml
crates/wondwise_cli/src/: commands.rs  main.rs
crates/wondwise_cli/src/commands/: run.rs  start.rs
crates/wondwise_lang/: Cargo.toml
crates/wondwise_lang/examples/: calc_functions.wd  import_file.wd
crates/wondwise_lang/src/: lib.rs  token.rs  tokens.rs
crates/wondwise_lang/src/tokens/: keywords.rs  signs.rs
crates/wondwise_utils/: Cargo.toml
crates/wondwise_utils/src/: dirs.rs  lib.rs  logs.rs  session.rs
src/: main.rs  utils.rs
src/utils/: dirs.rs  logs.rs
