[package]
name = "wondwise"
version = "0.1.0"
authors = ["Jheyson Saavedra <jheysonsaav@users.noreply.github.com>"]
edition = "2018"
description = "A powerful cross-platform shell"
license = "MIT"
keywords = ["shell", "cross-platform", "wondwise"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
clap = "4.0.4"
rustyline = "8.0.0"
directories = "3.0.2"
colored = "2.0.0"
