[package]
name = "wondwise-cli"
version = "0.1.0"
authors = ["Wondwise Contributors"]
edition = "2018"
description = "A powerful cross-platform shell"
repository = "https://github.com/wondwise/wondwise"
license = "GPL-3.0"
keywords = ["shell", "cross-platform", "wondwise"]
categories = ["command-line-interface", "command-line-utilities"]
default-run = "wondwise"

[[bin]]
name = "wondwise"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
rustyline = "8.0.0"
