[package]
name = "wondwise_utils"
version = "0.1.0"
authors = ["Wondwise Contributors"]
edition = "2018"
description = "A powerful cross-platform shell"
repository = "https://github.com/wondwise/wondwise"
license = "GPL-3.0"
keywords = ["shell", "cross-platform", "wondwise"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
directories = "3.0.2"
colored = "2.0.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
